--- a/css/style.css
+++ b/css/style.css
@@ -86,17 +86,52 @@ i:hover {
   @media screen and (max-width: 980px) {
 
     .container {
-      width: 100% !important;
-      max-width: 100% !important;
+        width: 100% !important;
+        max-width: 100% !important;
+      }
+
+      #header h1 {
+        font-size: 1.75rem;
+        text-align: center;
+      }
+
+      #header h3 {
+        font-size: 1.5rem;
+        text-align: center;
+      }
+
+      h3 {
+        font-size: 1.5rem;
+        text-align: center;
+      }
+
+      #header > * {
+      width: 108%;
+      }
+
+      ul li {
+      display: inline-block;
+      text-align: center;
+      padding: 1px 0px;
+      font-size: 1.45em;
     }
 
-    h1 {
-      font-size: 1.5rem;
+      .image.avatar img {
+      width: 50%;
+      max-width: 6.5rem
+    }
+
+    #header {
+      min-width: 28%;
       text-align: center;
     }
+
+    #main {
+      margin-left: 28%;
+      width: calc(100% - 28%);
+      padding: 4em 2em 2em 2em;
+    }
   }
-
-
 
   @media screen and (max-width: 720px) {
 
