add media responsiveness 360px

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,13 @@ i:hover {
     }
   }
 
+  @media screen and (max-width: 360px) {
+
+    ul {
+      display: inline-table;
+    }
+  }
+
 /* Row */
 
 .row {
