--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ a:hover {
   color: #3FA64F !important;
   text-decoration: none;
 }
-i {
+#header i {
   -moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
@@ -44,12 +44,26 @@ i {
   text-decoration: none;
 }
 
-i:hover {
+#header i:hover {
   border-bottom-color: transparent;
   color: #3FA64F !important;
   text-decoration: none;
 }
 
+#cards i {
+  -moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  color: #545454 !important;
+  text-decoration: none;
+}
+
+#cards i:hover {
+  border-bottom-color: transparent;
+  color: #3FA64F !important;
+  text-decoration: none;
+}
 
 /* Container */
 
@@ -96,12 +110,12 @@ i:hover {
       }
 
       #header h3 {
-        font-size: 1.5rem;
+        font-size: 1.35rem;
         text-align: center;
       }
 
       h3 {
-        font-size: 1.5rem;
+        font-size: 1.35rem;
         text-align: center;
       }
 
@@ -113,7 +127,7 @@ i:hover {
       display: inline-block;
       text-align: center;
       padding: 1px 0px;
-      font-size: 1.45em;
+      font-size: 1.35em;
     }
 
       .image.avatar img {
@@ -130,6 +144,10 @@ i:hover {
       margin-left: 28%;
       width: calc(100% - 28%);
       padding: 4em 2em 2em 2em;
+    }
+
+    #main .paragraph {
+      padding-top: 6%;
     }
   }
 
@@ -141,17 +159,17 @@ i:hover {
       }
 
       #header h1 {
-        font-size: 1.75rem;
+        font-size: 1.65rem;
         text-align: center;
       }
 
       #header h3 {
-        font-size: 1.5rem;
+        font-size: 1.15rem;
         text-align: center;
       }
 
       h3 {
-        font-size: 1.5rem;
+        font-size: 1.35rem;
         text-align: center;
       }
 
@@ -163,7 +181,7 @@ i:hover {
       display: inline-block;
       text-align: center;
       padding: 1px 0px;
-      font-size: 1.45em;
+      font-size: 1.35em;
     }
 
       .image.avatar img {
@@ -181,7 +199,17 @@ i:hover {
       padding: 4em 2em 2em 2em;
     }
 
+    #main .paragraph {
+      padding-top: 10%;
     }
+  }
+
+  @media screen and (max-width: 560px) {
+
+    #main .paragraph {
+      padding-top: 15%;
+    }
+  }
 
   @media screen and (max-width: 480px) {
 
@@ -193,7 +221,7 @@ i:hover {
       display: inline-block;
       text-align: center;
       padding: 1px 0px;
-      font-size: 1.45em;
+      font-size: 1.25em !important;
     }
 
     .image.avatar img {
@@ -202,27 +230,27 @@ i:hover {
     }
 
     h1 {
-      font-size: 1.5rem;
+      font-size: 1.25rem;
       text-align: center;
     }
 
     #header h1 {
-      font-size: 1rem;
+      font-size: 1.05rem;
       text-align: center;
     }
 
     #header h3 {
-      font-size: 0.8rem;
+      font-size: 1rem;
       text-align: center;
      }
 
     h3 {
-      font-size: 1.25rem;
+      font-size: 1.15rem;
       text-align: center;
     }
 
     h4 {
-      font-size: 1.25rem;
+      font-size: 1.15rem;
       text-align: -webkit-center;
     }
 
@@ -235,13 +263,14 @@ i:hover {
     }
 
     #main {
-      margin-left: 38%;
-      width: calc(100% - 38%);
+      margin-left: 38% !important;
+      margin-right: 2% !important;
+      width: calc(100% - 40%) !important;
       padding: 4em 2em 2em 2em;
     }
 
     #header h1 {
-    font-size: 1.35em;
+    font-size: 1.25em;
     }
 
     #header h2 {
@@ -249,11 +278,15 @@ i:hover {
     }
 
     #header p {
-      font-size: 0.8em;
+      font-size: 1em;
     }
 
     #header .image.avatar {
       width: 5.25em;
+    }
+
+    #main .paragraph {
+      padding-top: 10%;
     }
   }
 
@@ -1743,13 +1776,13 @@ i:hover {
   }
 
   header h2 + p {
-    font-size: 1.25em;
+    font-size: 1.25em !important;
     margin-top: -1em;
     line-height: 1.5em;
   }
 
   header h3 + p {
-    font-size: 1.1em;
+    font-size: 1.1em !important ;
     margin-top: -0.8em;
     line-height: 1.5em;
   }
@@ -1757,7 +1790,7 @@ i:hover {
   header h4 + p,
   header h5 + p,
   header h6 + p {
-    font-size: 0.9em;
+    font-size: 0.9em !important;
     margin-top: -0.6em;
     line-height: 1.5em;
   }
@@ -1794,30 +1827,6 @@ i:hover {
 
 .image.thumb {
   text-align: center;
-}
-
-.image.thumb:after {
-  -moz-transition: opacity 0.2s ease-in-out;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  -ms-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out;
-  border-radius: 0.35em;
-  border: solid 3px rgba(255, 255, 255, 0.9);
-  color: white;
-  content: 'Voir';
-  display: inline-block;
-  font-size: 0.8em;
-  font-weight: 400;
-  left: 50%;
-  line-height: 2.25em;
-  margin: -1.25em 0 0 -3em;
-  opacity: 0;
-  padding: 0 1.5em;
-  position: absolute;
-  text-align: center;
-  text-decoration: none;
-  top: 50%;
-  white-space: nowrap;
 }
 
 .image.thumb:hover:after {
@@ -1887,12 +1896,12 @@ i:hover {
 }
 
 .work-item h3 {
-  font-size: 1em;
+  font-size: 1.35em;
   margin: 0 0 0.5em 0;
 }
 
 .work-item p {
-  font-size: 0.8em;
+  font-size: 1em;
   line-height: 1.5em;
   margin: 0;
 }
@@ -1948,9 +1957,8 @@ width: 25%;
 }
 
 #header h1 {
-/*  font-size: 1.35em;*/
-  line-height: 1.75em;
   margin: 0;
+  font-size: 2.75em;
 }
 
 #header h2 {
@@ -1977,11 +1985,16 @@ width: 25%;
   color: #6c757d;
 }
 
+#header h3 {
+  font-size: 2em;
+}
+
 /* Main */
 
 #main {
   margin-left: 25%;
-  max-width: 54em;
+  margin-right: 5%;
+  max-width: 84em;
   padding: 8em 4em 4em 4em;
   width: calc(100% - 25%);
 }
