--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ a:hover {
       }
 
       #header h1 {
-        font-size: 1.75rem;
+        font-size: 1.75rem !important;
         text-align: center;
       }
 
@@ -159,7 +159,7 @@ a:hover {
       }
 
       #header h1 {
-        font-size: 1.65rem;
+        font-size: 1.65rem !important;
         text-align: center;
       }
 
@@ -169,7 +169,7 @@ a:hover {
       }
 
       h3 {
-        font-size: 1.35rem;
+        font-size: 1.15rem;
         text-align: center;
       }
 
@@ -235,12 +235,12 @@ a:hover {
     }
 
     #header h1 {
-      font-size: 1.05rem;
+      font-size: 1.05rem !important;;
       text-align: center;
     }
 
     #header h3 {
-      font-size: 1rem;
+      font-size: 1.15rem;
       text-align: center;
      }
 
@@ -270,7 +270,7 @@ a:hover {
     }
 
     #header h1 {
-    font-size: 1.25em;
+    font-size: 1.25em !important;
     }
 
     #header h2 {
@@ -1782,7 +1782,7 @@ a:hover {
   }
 
   header h3 + p {
-    font-size: 1.1em !important ;
+    font-size: 1.15em !important ;
     margin-top: -0.8em;
     line-height: 1.5em;
   }
@@ -1896,7 +1896,7 @@ a:hover {
 }
 
 .work-item h3 {
-  font-size: 1.35em;
+  font-size: 1.15em;
   margin: 0 0 0.5em 0;
 }
 
@@ -1958,7 +1958,7 @@ width: 25%;
 
 #header h1 {
   margin: 0;
-  font-size: 2.75em;
+  font-size: 1.75em !important;
 }
 
 #header h2 {
@@ -1986,7 +1986,7 @@ width: 25%;
 }
 
 #header h3 {
-  font-size: 2em;
+  font-size: 1.75em;
 }
 
 /* Main */
